--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,25 @@
-/* You can add global styles to this file, and also import other style files */
+@use "@angular/material" as mat;
+@use "@angular/material/theming";
+@include mat.core();
+
+$custom-app-primary: mat.define-palette(mat.$green-palette);
+$custom-app-secondary: mat.define-palette(mat.$indigo-palette, A200, A400, 700);
+$custom-app-warning: mat.define-palette(mat.$red-palette);
+
+$custom-theme: mat.define-light-theme($custom-app-primary, $custom-app-secondary, $custom-app-warning);
+
+@include mat.all-component-themes($custom-theme);
+@include mat.button-theme($custom-theme);
+
+html, body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+h1, h2, h3, h4, h5, h6, p {
+  margin: 0;
+}
