--- a/src/app/courses/courses/courses.component.scss
+++ b/src/app/courses/courses/courses.component.scss
@@ -1,3 +1,10 @@
 table {
   width: 100%;
 }
+
+.loading-spinner {
+  padding: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
